# kairos_bcp

./: .gitignore  .pre-commit-config.yaml  .roomodes  CHANGELOG.md  README.md  aigi.md  docker-compose.yml  final.md  prompts_LS1.md  pyproject.toml  reflection_LS1.md  reflection_LS2.md  reflection_LS_precommit.md  scores_LS2.json  scores_LS_precommit.json  test_specs_LS1.md
.roo/: FRAMEWORK_VALIDATION_REPORT.md  MCP_MEMORY_CONFIGURATION.md  README.md  config.json  mcp.json  pre_commit_guidelines.md  project-metadata.json
.roo/memory/: note_uc_guidelines.md
.roo/rules/: 01-general-workspace-guidelines.md  apply_diff_guidelines.md  file_operations_guidelines.md  insert_content.md  rules.md  search_replace.md  tdd_guidelines.md  tool_guidelines_index.md
.roo/rules-architect/: 01-instructions.md  rules.md
.roo/rules-ask/: rules.md
.roo/rules-code/: 01-instructions.md  rules.md
.roo/rules-critic/: rules.md
.roo/rules-debug/: rules.md
.roo/rules-deep-research-agent/: rules.md
.roo/rules-final-assembly/: rules.md
.roo/rules-memory/: rules.md
.roo/rules-memory-manager/: rules.md
.roo/rules-mode-optimizer/: custom-instructions.md
.roo/rules-orchestrator/: rules.md
.roo/rules-pre-commit-validator/: 01-instructions.md
.roo/rules-prompt-generator/: rules.md
.roo/rules-reflection/: rules.md
.roo/rules-tdd/: rules.md
.roo/rules-test-creator/: 01-instructions.md
.roo/rules-tutorial/: rules.md
docs/architecture/adr/: ADR-002-async-repository-consolidation.md
docs/development/: repository-patterns.md
research/: analisis_recursos_externos_roo.md  ui_ux_paradigm.md  unit_of_work_dual_mode_analysis.md
src/pkm_app/core/: README.md
src/pkm_app/core/application/: README.md
src/pkm_app/core/application/dtos/: keyword_dto.py  note_dto.py  user_profile_dto.py
src/pkm_app/core/application/interfaces/: note_async_interface.py  note_interface.py  note_sync_interface.py  unit_of_work_interface.py
src/pkm_app/core/domain/: README.md  errors.py
src/pkm_app/core/domain/entities/: user_profile.py
src/pkm_app/infrastructure/: README.md
src/pkm_app/infrastructure/persistence/: README.md
src/pkm_app/infrastructure/persistence/migrations/: README.md
src/pkm_app/infrastructure/persistence/migrations/versions/: README.md
src/pkm_app/infrastructure/persistence/schema/: seed.sql
src/pkm_app/infrastructure/persistence/sqlalchemy/: async_unit_of_work.py  database.py  models.py  repositories.py  sync_unit_of_work.py  unit_of_work.py
src/pkm_app/infrastructure/persistence/sqlalchemy/repositories/: note_async_repository.py  note_repository.py  note_sync_repository.py
src/pkm_app/infrastructure/web/: README.md
src/pkm_app/tests/: README.md  TESTING_STRATEGY.md
src/pkm_app/tests/integration/infrastructure/: test_sqlalchemy_models.py
src/pkm_app/tests/integration/persistence/: test_note_workflow.py
src/pkm_app/tests/integration/persistence/sqlachemy/repositories/: test_async_note_workflow.py  test_sync_note_workflow.py
src/pkm_app/tests/unit/core/application/dtos/: test_keyword_dto.py
src/pkm_app/tests/unit/infrastructure/persistence/sqlalchemy/: test_database.py
